--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="media/images/mainLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Bootstrap -->
@@ -22,7 +22,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>React App</title>
+    <title>Zerodha Support Portal: Find answers to all your quires</title>
   </head>
   <body>
     <div id="root"></div>
